[project]
name = "docker-tools"
version = "0.1.0"
description = "CLI tool for managing Docker container cleanups"
requires-python = ">=3.10"
dependencies = [
    "click>=8.1.0",
    "pydantic>=2.0",
    "tomli>=2.0.0",
    "python-dotenv>=0.19.0"  # Added for config loading
]
scripts = {docker-tools = "docker_tools.cli:cli"}  # Add entry point

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.0.0",
    "ruff>=0.3.0",
    "coverage>=7.0.0",
    "types-python-dotenv>=1.0.0"  # For type checking
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "--verbose --color=yes --cov=docker_tools --cov-report=term-missing"
filterwarnings = ["ignore::DeprecationWarning"]
log_cli = true
log_level = "INFO"
markers = [
    "unit: mark a test as unit test",
    "integration: mark a test as integration test",
    "database: tests involving database operations"
]
minversion = "7.0"
norecursedirs = [".venv", "build", "dist", ".git"]
xfail_strict = true

[build-system]
requires = ["flit_core >=3.9.0"]
build-backend = "flit_core.buildapi"

[tool.ruff]
line-length = 120
select = ["E", "F", "W", "I", "B"]
ignore = ["E501", "E402"]

[tool.ruff.mccabe]
max-complexity = 10
